--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
 	<div class="container">
 		<section class="box">
 			<div class="box-contents">
-				<p><a href="./mainpage.html" target="_self">Home</a></p>
-				<p><a href="./2023awards.html" target="_self">2023 Galaxy Awards</a></p>
-				<p><a href="./2022awards.html" target="_self">2022 Galaxy Awards</a></p>
-				<p><a href="./aboutus.html" target="_self">About us</a></p>
-				<p><a href="./aboutsf.html" target="_self">About SF</a></p>
-				<p><a href="./event.html" target="_self">Event</a></p>
+				<p><a href="https://yeonucho.github.io/GalaxyAwardsMainpage/" target="_self">Home</a></p>
+				<p><a href="https://yeonucho.github.io/GalaxyAwards2023Awards/" target="_self">2023 Galaxy Awards</a></p>
+				<p><a href="https://yeonucho.github.io/GalaxyAwards2022Awards/" target="_self">2022 Galaxy Awards</a></p>
+				<p><a href="https://yeonucho.github.io/GalaxyAwardsAboutUs/" target="_self">About us</a></p>
+				<p><a href="https://yeonucho.github.io/GalaxyAwardsAboutSF/" target="_self">About SF</a></p>
+				<p><a href="https://yeonucho.github.io/GalaxyAwardsEvent/" target="_self">Event</a></p>
 			</div>
 			<aside class="box-sidebar">
-				<a href="./menu.html">
+				<a href="https://yeonucho.github.io/GalaxyAwardsMenu/">
 				<img style="width: 60%; display: block; margin: 0 auto; padding-top: 940px;" src="./menuicon.jpg">
 				</a>
 			</aside>
